# discord-py-paginators

./: .gitignore  .readthedocs.yaml  README.rst  aaah.py  pyproject.toml  test.py
discord/ext/paginators/: __init__.py  _types.py  base_paginator.py  button_paginator.py  button_select_paginator.py  core.py  errors.py  modal_paginator.py  one_select_paginator.py  page.py  select_paginator.py  ttl_cache.py  utils.py
discord/ext/paginators/buttons/: __init__.py  _types.py  button.py  paginator.py
discord/ext/paginators/selects/: __init__.py  option.py  paginator.py
docs/: base.rst  conf.py  errors.rst  index.rst  paginators.rst  types.rst  whats_new.rst
docs/_static/: custom.css
examples/: basic.py
tests/: test_button_paginator.py  test_select_paginator.py
